[package]
name    = "basicsynth"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = [
	"cdylib",
]

[dependencies]
nih_plug = { git = "https://github.com/transkatgirl/nih-plug.git", rev = "1f132feff0b03df8b5078ffaa1087201c9545d3f", features = [
	"assert_process_allocs",
	"standalone",
] }
nih_plug_egui = { git = "https://github.com/transkatgirl/nih-plug.git", rev = "1f132feff0b03df8b5078ffaa1087201c9545d3f" }

[profile.dev]
opt-level = 3

[profile.release]
lto   = "thin"
strip = "symbols"
panic = "abort"
